@@ -1,3 +1,8 @@
+2006-01-12  Adam Jackson  <ajax@freedesktop.org>
+
+	* Wraphelp.c:
+	static -> static const
+
 2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
